--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="main-screen">
-        
+        <section class="board" id="board"></section>
     </section>
 
     <script src="./scripts/main.js"></script>
